add: Added Swagger UI for Search All Books By Authors Name And Price Filter API
